Fixed issues based on SonarCloud

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,4 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Home</title>
+</head>
 <body>
 <h1>Board</h1>
 <p>Today      Fri, 14 May 2021</p>
