--- a/bin/index.html
+++ b/bin/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
-<style>
-</style>
+  <title>Home</title>
+  <meta charset="utf-8">
+  <!-- Responsiveness - mobile-first -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CDN -->
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+  </style>
 </head>
+
 <body>
-<h1>Board</h1>
-<p>Today - Fri, 14 May 2021</p>
+  <!--Container for page  -->
+<div class="container">
+  <h1>Board</h1>
+  <p>Today - Fri, 14 May 2021</p>
+</div>
+
 </body>
 </html>
