Adding containers, headings, paragraphs to index.html

--- a/bin/index.html
+++ b/bin/index.html
@@ -18,10 +18,22 @@
 
 <body>
   <!--Container for page  -->
-<div class="container">
-  <h1>Board</h1>
-  <p>Today - Fri, 14 May 2021</p>
-</div>
+  <div class="container">
+    <h3>Today Fri, 14 May 2021</h3>
+    <!--Container for section  -->
+    <div class="section_today_container">
+      <p>Anna's birthday(23)</p>
+      <p>Ascension day(DK)</p>
+      <p>Fatima's name day(DK)</p>
+    </div>
+    <h3>Upcoming events</h3>
+    <!--Container for section  -->
+    <div class="section_upcoming_container">
+      <p>Sarah's birthday Tomorrow</p>
+      <p>Jake's birthday Sat, 15 May 2021</p>
+      <p>Whit Monday Mon, 16 May 2021</p>
+    </div>
+  </div>
 
 </body>
 </html>
