--- a/bin/index.html
+++ b/bin/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Home</title>
   <meta charset="utf-8">
+    <!-- Add external CSS file -->
+    <link rel="stylesheet" href="index.css">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
@@ -12,8 +14,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-  </style>
+
 </head>
 
 <body>
