--- a/bin/index.html
+++ b/bin/index.html
@@ -4,7 +4,7 @@
   <title>Home</title>
   <meta charset="utf-8">
   <!-- Add external CSS file -->
-  <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
