Navigation bar, events.html and settings.html added

--- a/bin/events.html
+++ b/bin/events.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home</title>
+  <title>Events</title>
   <meta charset="utf-8">
-  <!-- Add external CSS file -->
-  <link rel="stylesheet" href="public/style/index.css">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
@@ -27,30 +25,12 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Board</a></li>
-        <li><a href="events.html">Events</a></li>
+        <li><a href="index.html">Board</a></li>
+        <li class="active"><a href="events.html">Events</a></li>
         <li><a href="settings.html">Settings</a></li>
       </ul>
     </div>
   </nav>
-
-  <!--Container for page  -->
-  <div class="container">
-    <h3>Today Fri, 14 May 2021</h3>
-    <!--Container for section  -->
-    <div class="section_today_container">
-      <p>Anna's birthday(23)</p>
-      <p>Ascension day(DK)</p>
-      <p>Fatima's name day(DK)</p>
-    </div>
-    <h3>Upcoming events</h3>
-    <!--Container for section  -->
-    <div class="section_upcoming_container">
-      <p>Sarah's birthday Tomorrow</p>
-      <p>Jake's birthday Sat, 15 May 2021</p>
-      <p>Whit Monday Mon, 16 May 2021</p>
-    </div>
-  </div>
 
 </body>
 </html>
