--- a/bin/index.html
+++ b/bin/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Board</a></li>
-        <li><a href="events.html">Events</a></li>
+        <li><a href="events">Events</a></li>
         <li><a href="settings.html">Settings</a></li>
       </ul>
     </div>
