--- a/bin/events.html
+++ b/bin/events.html
@@ -25,9 +25,9 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Board</a></li>
-        <li class="active"><a href="events.html">Events</a></li>
-        <li><a href="settings.html">Settings</a></li>
+        <li><a href="/">Board</a></li>
+        <li class="active"><a href="events">Events</a></li>
+        <li><a href="settings">Settings</a></li>
       </ul>
     </div>
   </nav>
