--- a/bin/index.html
+++ b/bin/index.html
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Board</a></li>
         <li><a href="events">Events</a></li>
-        <li><a href="settings.html">Settings</a></li>
+        <li><a href="settings">Settings</a></li>
       </ul>
     </div>
   </nav>
