--- a/bin/events.html
+++ b/bin/events.html
@@ -32,5 +32,44 @@
     </div>
   </nav>
 
+  <!--Container for page  -->
+  <div class="container">
+    <!--Container for events  -->
+    <div class="events_1_container">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Anna's birthday(23)
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Ascension day(DK
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Fatima's name day(DK)
+        </label>
+      </div>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Other event
+        </label>
+      </div>
+
+      <!--Container for event management  -->
+      <div class="event_management_2_container">
+        <button type="button" class="btn btn-default">Add</button>
+        <button type="button" class="btn btn-default">Modify</button>
+        <button type="button" class="btn btn-default">Delete</button>
+      </div>
+
+    </div>
+
 </body>
 </html>
