Correcting path to settings' stylesheet

--- a/bin/settings.html
+++ b/bin/settings.html
@@ -4,7 +4,7 @@
   <title>Settings</title>
   <meta charset="utf-8">
   <!-- Add external CSS file -->
-  <link rel="stylesheet" href="settings.css">
+  <link rel="stylesheet" href="public/style/settings.css">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
