Horizontal divider to settings

--- a/bin/settings.html
+++ b/bin/settings.html
@@ -55,6 +55,8 @@
       <!-- Paragraph -->
       <p>Scheduled at 9:00 AM on event's day</p>
     </div>
+    <!-- horizontal divider  -->
+    <hr>
     <!--Container for section  -->
     <div class="notification_container">
       <!-- Rounded switches -->
