Checkboxes replaced by toggle swithes

--- a/bin/settings.html
+++ b/bin/settings.html
@@ -75,18 +75,22 @@
       </div>
       <p>Only favorites</p>
       <p>Scheduled</p>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          A day before
+      <!-- Rounded switches -->
+      <div class="switch_container">
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
         </label>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          Event's day at 8:00 AM
+      <p>A day before</p>
+      <!-- Rounded switches -->
+      <div class="switch_container">
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
         </label>
       </div>
+      <p>Event's day at 8:00 AM</p>
       <div class="button_container">
         <button type="button" class="btn btn-default">Save</button>
       </div>
