--- a/bin/settings.html
+++ b/bin/settings.html
@@ -45,7 +45,7 @@
           <span class="slider round"></span>
         </label>
       </div>
-      <p>Automatic message</p>
+      <p class="section_head">Automatic message</p>
       <!-- Message area -->
       <div class="form-group">
         <label for="email">Message</label>
@@ -66,7 +66,7 @@
           <span class="slider round"></span>
         </label>
       </div>
-      <p>Notifications</p>
+      <p class="section_head">Notifications</p>
       <div class="switch_container">
         <label class="switch">
           <input type="checkbox">
