--- a/bin/events.html
+++ b/bin/events.html
@@ -3,6 +3,8 @@
 <head>
   <title>Events</title>
   <meta charset="utf-8">
+  <!-- Add external CSS file -->
+  <link rel="stylesheet" href="public/style/events.css">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
