Horizontal divider to events

--- a/bin/events.html
+++ b/bin/events.html
@@ -63,7 +63,8 @@
           Other event
         </label>
       </div>
-
+      <!-- horizontal divider  -->
+      <hr>
       <!--Container for event management  -->
       <div class="event_management_2_container">
         <button type="button" class="btn btn-default">Add</button>
