--- a/bin/events.html
+++ b/bin/events.html
@@ -41,26 +41,26 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Anna's birthday(23)
+          Anna's birthday(23)  Today
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Ascension day(DK
+          Ascension day(DK)  Today
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Fatima's name day(DK)
+          Fatima's name day  Today
         </label>
       </div>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
-          Other event
+          Other event  Tomorrow
         </label>
       </div>
       <!-- horizontal divider  -->
