--- a/bin/index.html
+++ b/bin/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Board</a></li>
+        <li class="active"><a href="/">Index</a></li>
         <li><a href="events">Events</a></li>
         <li><a href="settings">Settings</a></li>
       </ul>
