--- a/bin/index.html
+++ b/bin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>BirthdayReminder</title>
+  <title>Home</title>
   <meta charset="utf-8">
   <!-- Add external CSS file -->
   <link rel="stylesheet" href="public/style/index.css">
