--- a/bin/index.html
+++ b/bin/index.html
@@ -39,7 +39,7 @@
     <h3>Today Fri, 17 May 2021</h3>
     <!--Container for section  -->
     <div class="section_today_container">
-      <p>Anne's birthday(23)</p>
+      <p>Anna's birthday(23)</p>
       <p>Ascension day(DK)</p>
       <p>Fatima's name day(DK)</p>
     </div>
