--- a/bin/index.html
+++ b/bin/index.html
@@ -36,7 +36,7 @@
 
   <!--Container for page  -->
   <div class="container">
-    <h3>{{ date }}</h3>
+    <h3><%= datetime %></h3>
     <!--Container for section  -->
     <div class="section_today_container">
       <p>Anna's birthday(23)</p>
