--- a/app/bin/events.html
+++ b/app/bin/events.html
@@ -4,7 +4,7 @@
   <title>Events</title>
   <meta charset="utf-8">
   <!-- Add external CSS file -->
-  <link rel="stylesheet" href="public/style/events.css">
+  <link rel="stylesheet" href="style/events.css">
   <!-- Responsiveness - mobile-first -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CDN -->
